[tool.poetry]
name = "stv-services"
version = "1.6.1"
description = "Integration services for Seed The Vote"
authors = ["Daniel Brotsky <dan@clickonetwo.io>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {version = "^1.4", extras = ["postgresql"]}
alembic = {extras = ["tz"], version = "^1.8"}
restnavigator = "^1.0.1"
python-dateutil = "^2.8.2"
click = "^8.1.2"
pyairtable = "^1.3"
click-shell = "^2.1"
redis = "^4.4"
fastapi = "^0.88"
aioredis = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.20"}
gunicorn = "^20.1.0"
icalendar = "^5.0"

[tool.poetry.dev-dependencies]
black = "^22.12"
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
